margin and align fixes

--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,10 @@ section {
   section {
     padding: 85px 0px!important;
   }
+
+  .roadmap .img-title {
+    margin-right: 9vw!important;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 991.98px)  {
@@ -155,6 +159,10 @@ section {
   section {
     padding: 85px 15vw!important;
   }
+
+  .roadmap .img-title {
+    margin-right: 6vw!important;
+  }
 }
 
 /* ==================================================
@@ -165,7 +173,7 @@ section.roadmap {
 }
 
 .roadmap .img-title {
-  margin-right: 7.5vw!important;
+  margin-right: 7.5vw;
 }
 
 .discover {
@@ -195,7 +203,7 @@ section.roadmap {
 .portrait-team img {
   border: 1px solid #fff;
   display: inline-block;
-  margin: 0px;
+  margin: 1rem 0rem;
   max-width: 25rem;
   width: auto;
   height: auto;
@@ -206,14 +214,15 @@ section.roadmap {
   max-height: 3rem;
   width: auto;
   height: auto;
+  margin-bottom: 0.2rem!important;
 }
 
 .title-bottom {
-  margin: auto 0 0 0.5rem;
+  margin: auto 0 0 1rem;
 }
 
 .text-bottom {
-  margin: auto 0 0.5rem 0.5rem;
+  margin: auto 0 0.3rem 1rem;
 }
 
 .img-title {
@@ -241,11 +250,15 @@ section.roadmap {
   }
 
   .number img {
-    max-height: 1.5rem;
+    max-height: 2rem;
   }
 
   .img-title img {
     max-height:2rem;
+  }
+
+  .portrait-team img {
+    max-width: 20rem;
   }
   
 }
@@ -409,6 +422,10 @@ button[class="accordion-button"] .accordion-arrow::before {
 
   .side-menu {
     max-width: 80vw!important;
+  }
+
+  .wrapper-bg-gradient {
+    padding: 1rem 3rem;
   }
 }
 
